@@ -274,18 +274,16 @@ static CVReturn displayLinkCallback(CVDisplayLinkRef displayLink,
 	return NSMouseInRect(mouseLocation, [self bounds], [self isFlipped]);
 }
 
-- (BOOL)windowShouldClose:(id)sender
+- (void)windowWillClose:(NSNotification *)notification
 {
-	NSLog(@"CanvasView windowShouldClose");
+	NSLog(@"CanvasView windowWillClose");
 	
 	[self stopDisplayLink];
-	
-	return YES;
 }
 
 - (void)windowDidBecomeKey:(NSNotification *)notification
 {
-	NSLog(@"CanvasView windowDidBecomeKey");
+//	NSLog(@"CanvasView windowDidBecomeKey");
 	
 	if (!canvas)
 	{
@@ -295,14 +293,11 @@ static CVReturn displayLinkCallback(CVDisplayLinkRef displayLink,
 	
 	[document lockEmulation];
 	((OpenGLCanvas *)canvas)->becomeKeyWindow();
+	[self synchronizeKeyboardFlags];
 	[document unlockEmulation];
 	
 	if ([self isMouseInView])
 		[self mouseEntered:nil];
-	
-	[document lockEmulation];
-	[self synchronizeKeyboardFlags];
-	[document unlockEmulation];
 	
 	NSTrackingAreaOptions options = (NSTrackingMouseEnteredAndExited |
 									 NSTrackingMouseMoved |
@@ -317,7 +312,7 @@ static CVReturn displayLinkCallback(CVDisplayLinkRef displayLink,
 
 - (void)windowDidResignKey:(NSNotification *)notification
 {
-	NSLog(@"CanvasView windowDidResignKey");
+//	NSLog(@"CanvasView windowDidResignKey");
 	
 	if (!canvas)
 	{
@@ -450,10 +445,10 @@ static CVReturn displayLinkCallback(CVDisplayLinkRef displayLink,
 	
 	CVDisplayLinkStart(displayLink);
 	
-	[[NSNotificationCenter defaultCenter] addObserver:self
+/*	[[NSNotificationCenter defaultCenter] addObserver:self
 											 selector:@selector(globalFrameDidChange:)
 												 name:NSViewGlobalFrameDidChangeNotification
-											   object:self];
+											   object:self];*/
 }
 
 - (void)stopDisplayLink
@@ -462,7 +457,7 @@ static CVReturn displayLinkCallback(CVDisplayLinkRef displayLink,
 	
 	CVDisplayLinkStop(displayLink);
 	
-	[[NSNotificationCenter defaultCenter] removeObserver:self];
+//	[[NSNotificationCenter defaultCenter] removeObserver:self];
 }
 
 - (void)globalFrameDidChange:(NSNotification*)notification
@@ -485,19 +480,20 @@ static CVReturn displayLinkCallback(CVDisplayLinkRef displayLink,
 	return defaultViewSize;
 }
 
-/*- (void)update
- {
- CGLLockContext(cglContextObj);
- 
- [[self openGLContext] makeCurrentContext];
- [super update];
- 
- CGLUnlockContext(cglContextObj);
- }*/
+/*
+- (void)update
+{
+	CGLLockContext(cglContextObj);
+	
+	[[self openGLContext] makeCurrentContext];
+	[super update];
+	
+	CGLUnlockContext(cglContextObj);
+}*/
 
 - (void)drawRect:(NSRect)theRect
 {
-    CGLLockContext(cglContextObj);
+	CGLLockContext(cglContextObj);
 	
 	[[self openGLContext] makeCurrentContext];
 	
@@ -505,7 +501,7 @@ static CVReturn displayLinkCallback(CVDisplayLinkRef displayLink,
 	if (((OpenGLCanvas *)canvas)->update(NSWidth(frame), NSHeight(frame), 0, true))
 		[[self openGLContext] flushBuffer];
 	
-    CGLUnlockContext(cglContextObj);
+	CGLUnlockContext(cglContextObj);
 }
 
 - (void)updateView
@@ -646,7 +642,7 @@ static CVReturn displayLinkCallback(CVDisplayLinkRef displayLink,
 
 - (void)mouseEntered:(NSEvent *)theEvent
 {
-	NSLog(@"CanvasView mouseEntered");
+//	NSLog(@"CanvasView mouseEntered");
 	
 	[document lockEmulation];
 	((OpenGLCanvas *)canvas)->enterMouse();
@@ -655,7 +651,7 @@ static CVReturn displayLinkCallback(CVDisplayLinkRef displayLink,
 
 - (void)mouseExited:(NSEvent *)theEvent
 {
-	NSLog(@"CanvasView mouseExited");
+//	NSLog(@"CanvasView mouseExited");
 	
 	[document lockEmulation];
 	((OpenGLCanvas *)canvas)->exitMouse();
